--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
   	<head>
-    <meta charset="utf-8">
-	
+	<meta charset="utf-8">
+	<link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
