--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     		<h4>Where do the people come from?</h4>
 		<p>All over the world, but especially Latin America, the Middle East, and rural America.</p>
     		<h4>What languages and frameworks are supported?</h4>
-		<p>CSS, HTML, Django, Python, React, and Javascript.</p>
-		<h4>Why is it so low-cost?</h4>
+		<p>CSS, HTML, Django, Rails, Python, React, and Javascript.</p>
+		<!--<h4>Why is it so low-cost?</h4>
 		<p>It's all being subsidized by a machine learning operation. 
     		   We're studying developer chat interactions to train a neural network to generate code automatically (AI for code). 
 		   In the meantime, you get inexpensive developer resources.
-		    </p>
+		    </p>-->
  		</div>	
   </div>
 </body>
