--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,16 @@
-<html>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  	<head>
+	<meta charset="utf-8">
+	<link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	
+
 <h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
 
 1. Terms
