--- a/privacy.html
+++ b/privacy.html
@@ -9,8 +9,9 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	</head>
+<body>
 	
-
 <h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
 
 1. Terms
