--- a/privacy.html
+++ b/privacy.html
@@ -14,11 +14,11 @@
 	
 <h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
 
-1. Terms
+	<h2> Terms</h2>
 
   By accessing the website at https://www.crowdbotics.com, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.
 
-2. Use License
+	<h3> Use License</h3>
 
   
     
@@ -35,30 +35,30 @@
     This license shall automatically terminate if you violate any of these restrictions and may be terminated by Crowdbotics Corporation at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
   
 
-3. Disclaimer
+	<h3> Disclaimer</h3>
 
   
     The materials on Crowdbotics Corporation's website are provided on an 'as is' basis. Crowdbotics Corporation makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
     Further, Crowdbotics Corporation does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
   
 
-4. Limitations
+	<h3> Limitations</h3>
 
   In no event shall Crowdbotics Corporation or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on Crowdbotics Corporation's website, even if Crowdbotics Corporation or a Crowdbotics Corporation authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
 
-5. Accuracy of materials
+<h3> Accuracy of materials</h3>
 
   The materials appearing on Crowdbotics Corporation's website could include technical, typographical, or photographic errors. Crowdbotics Corporation does not warrant that any of the materials on its website are accurate, complete or current. Crowdbotics Corporation may make changes to the materials contained on its website at any time without notice. However Crowdbotics Corporation does not make any commitment to update the materials.
 
-6. Links
+<h3>  Links</h3>
 
   Crowdbotics Corporation has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Crowdbotics Corporation of the site. Use of any such linked website is at the user's own risk.
 
-7. Modifications
+<h3> Modifications</h3>
 
   Crowdbotics Corporation may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
 
-8. Governing Law
+<h3> Governing Law</h3>
 
   These terms and conditions are governed by and construed in accordance with the laws of CA and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.
 
