--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,12 @@
 	</head>
 <body>
 	
-<h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
+	<div class="container">
+	  <div class="page-header">
+	    <div class = "jumbotron">
+
+	
+	<h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
 
 	<h2> Terms</h2>
 
@@ -79,5 +84,9 @@
   
 
   We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. Crowdbotics Corporation may change this privacy policy from time to time at Crowdbotics Corporation's sole discretion.</p>
-</body>
+	</div>
+	</div>
+	</div>
+		
+		</body>
 </html>
