--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
 	    <div class = "jumbotron">
 
 	
-	<h1>Crowdbotics Corporation Terms of Service and Privacy Policy</h1>
+	<h1>Crowdbotics Terms of Service and Privacy Policy</h1>
 
 	<h2> Terms</h2>
 
@@ -69,9 +69,9 @@
 
 <h2>Privacy Policy</h2>
 
-<p>  Your privacy is important to us.</p>
+Your privacy is important to us.
 
-<p>  It is Crowdbotics Corporation's policy to respect your privacy regarding any information we may collect while operating our website. Accordingly, we have developed this privacy policy in order for you to understand how we collect, use, communicate, disclose and otherwise make use of personal information. We have outlined our privacy policy below.</p>
+It is Crowdbotics Corporation's policy to respect your privacy regarding any information we may collect while operating our website. Accordingly, we have developed this privacy policy in order for you to understand how we collect, use, communicate, disclose and otherwise make use of personal information. We have outlined our privacy policy below.
 
   
     We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned.
@@ -80,7 +80,7 @@
     Personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.
     We will protect personal information by using reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.
     We will make readily available to customers information about our policies and practices relating to the management of personal information.
-    We will only retain personal information for as long as necessary for the fulfilment of those purposes.</p>
+    We will only retain personal information for as long as necessary for the fulfilment of those purposes.
   
 
   We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. Crowdbotics Corporation may change this privacy policy from time to time at Crowdbotics Corporation's sole discretion.</p>
