--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <div class="hero">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-duration="400">
       <div class="logo-box w-container">
-          <h1 class="logo">(by invitation only)</h1>
+          <h1 class="logo"></h1>
         <div class="menu-button w-nav-button"></div>
       </div>
     </div>
     <div class="hero-container w-container">
-      <div class="hero-subtitle">Introducing a new way of writing software. <br>Faster, smarter, and more humane.</div>
+      <div class="hero-subtitle">Introducing a new way of writing software. <br>Faster, smarter, and more human.</div>
       <h1 class="hero-heading">Crowdbotics.</h1>
-      <a class="big button w-button" href="mailto:careers@crowdbotics.com?subject=Let&#39;s do it.">Get in Touch</a>
+      <a class="big button w-button" href="mailto:preview@crowdbotics.com?subject=Let&#39;s do it.">Join the Preview</a>
     </div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
