--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   }
 });</script><script src="https://daks2k3a4ib2z.cloudfront.net/0globals/modernizr-2.7.1.js" type="text/javascript"></script><link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon"><link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon"></head>
 <body>
+	
+	
+	
   <div class="hero">
-    <div class="nav-bar w-nav" data-animation="default" data-collapse="medium" data-duration="400">
+    <div class="nav-bar w-nav" data-animation="default" data-collapse="all" data-duration="400">
       <div class="logo-box w-container">
-          <h1 class="logo"></h1>
+        <a class="brand-link w-nav-brand" href="/"></a>
         <div class="menu-button w-nav-button"></div>
       </div>
     </div>
@@ -29,6 +32,9 @@
       <a class="big button w-button" href="mailto:preview@crowdbotics.com?subject=Let&#39;s do it.">Join the Preview</a>
     </div>
   </div>
+	
+	
+	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 <script src="https://daks2k3a4ib2z.cloudfront.net/58c2dd8fa3d5406c39a3fb53/js/webflow.f3b8b4639.js" type="text/javascript"></script>
 <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
