Updates to design and layout; internal CSS.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<title>Crowdbotics: Reinventing software.</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="https://daks2k3a4ib2z.cloudfront.net/58c2dd8fa3d5406c39a3fb53/css/reduced-landing-page.webflow.d83e605d7.css" rel="stylesheet" type="text/css">
+	<link href="cb.css" rel="stylesheet" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
 	<script type="text/javascript">WebFont.load({
   google: {
