--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   google: {
     families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:300,regular,500","Roboto Slab:regular"]
   }
-});</script><script src="https://daks2k3a4ib2z.cloudfront.net/0globals/modernizr-2.7.1.js" type="text/javascript"></script><link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon"><link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon"></head>
+});</script><script src="https://daks2k3a4ib2z.cloudfront.net/0globals/modernizr-2.7.1.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" type="image/x-icon"><link href="favicon.ico" rel="apple-touch-icon"></head>
 <body>
 	
 	
