--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 
 
 <head>
-	<meta charset="utf-8">
-	<title>Crowdbotics: Reinventing software.</title>
-	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="cb.css" rel="stylesheet" type="text/css">
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-	<script type="text/javascript">WebFont.load({
+  <meta charset="utf-8">
+  <title>Crowdbotics: Reinventing software.</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="cb.css" rel="stylesheet" type="text/css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script type="text/javascript">WebFont.load({
   google: {
     families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:300,regular,500","Roboto Slab:regular"]
   }
 });</script><script src="https://daks2k3a4ib2z.cloudfront.net/0globals/modernizr-2.7.1.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" type="image/x-icon"><link href="favicon.ico" rel="apple-touch-icon"></head>
 <body>
-	
-	
-	
+  
+  
+  
   <div class="hero">
     <div class="nav-bar w-nav" data-animation="default" data-collapse="all" data-duration="400">
       <div class="logo-box w-container">
@@ -29,13 +31,27 @@
     <div class="hero-container w-container">
       <div class="hero-subtitle">Introducing a new way of writing software. <br>Faster, smarter, and more human.</div>
       <h1 class="hero-heading">Crowdbotics.</h1>
-      <a class="big button w-button" href="mailto:preview@crowdbotics.com?subject=Let&#39;s do it.">Join the Preview</a>
+      <a class="big button w-button" data-toggle="modal" data-target="#cbModal">Join the Preview</a>
     </div>
   </div>
-	
-	
-	
+  <!-- Modal -->
+  <div class="modal fade" id="cbModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shr3oUkvpwMCtfxhC?backgroundColor=orange" frameborder="0" onmousewheel="" width="100%" height="1072" style="background: transparent;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>  
+  
+  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 </html>
