--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <title>Crowdbotics: Reinventing software.</title>
-    <meta name="description" content="Technology startup using machine learning and crowdsourcing to help companies build software faster. Developers on demand.">
+    <meta name="description" content="Developers on demand. Crowdbotics combines machine learning and crowdsourcing to help visionaries and technology teams build software faster.">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="cb.css" rel="stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
