--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       </div>
     </div>
     <div class="hero-container w-container">
-      <div class="hero-subtitle">Introducing a new way of writing software. <br>Faster, smarter, and more human.</div>
+      <div class="hero-subtitle">Developers on demand. <br>Pay by the hour, directly in Slack.</div>
       <h1 class="hero-heading">Crowdbotics.</h1>
-      <a class="big button w-button" data-toggle="modal" data-target="#cbModal">Join the Preview</a>
+      <a class="big button w-button" data-toggle="modal" data-target="#cbModal">Get started now.</a>
     </div>
   </div>
   <!-- Modal -->
