--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="hero-container w-container">
-      <div class="hero-subtitle">Developers on demand. <br>Pay by the hour, directly in Slack.</div>
+      <div class="hero-subtitle">Developers on demand, directly in Slack. <br>Pay by the hour and build faster.</div>
       <h1 class="hero-heading">Crowdbotics.</h1>
       <a class="big button w-button" data-toggle="modal" data-target="#cbModal">Get started now.</a>
     </div>
