--- a/signup.html
+++ b/signup.html
@@ -1,24 +1,22 @@
 <html>
 <body>
-    <div id="wufoo-mvkwk5q1nmo5p1">
-    Fill out my <a href="https://crowdbotics.wufoo.com/forms/mvkwk5q1nmo5p1">online form</a>.
-    </div>
-    <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/partners/">Wufoo integrations</a> and get your data to your favorite apps.</div>
-    <script type="text/javascript">var mvkwk5q1nmo5p1;(function(d, t) {
-    var s = d.createElement(t), options = {
-    'userName':'crowdbotics',
-    'formHash':'mvkwk5q1nmo5p1',
-    'autoResize':true,
-    'height':'260',
-    'async':true,
-    'host':'wufoo.com',
-    'header':'show',
-    'ssl':true};
-    s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-    s.onload = s.onreadystatechange = function() {
-    var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-    try { mvkwk5q1nmo5p1 = new WufooForm();mvkwk5q1nmo5p1.initialize(options);mvkwk5q1nmo5p1.display(); } catch (e) {}};
-    var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-    })(document, 'script');</script>
-</body>
+<div id="wufoo-zqsa7jl1jpt66g">
+Loading checkout <a href="https://crowdbotics.wufoo.com/forms/zqsa7jl1jpt66g">form</a>.
+</div>
+<script type="text/javascript">var zqsa7jl1jpt66g;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'crowdbotics',
+'formHash':'zqsa7jl1jpt66g',
+'autoResize':true,
+'height':'386',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { zqsa7jl1jpt66g = new WufooForm();zqsa7jl1jpt66g.initialize(options);zqsa7jl1jpt66g.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script></body>
 </html>
